--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "angular2-text-mask": "^9.0.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-mask": "^14.0.3",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
